--- a/AlanaRetratos-Front-End/index.html
+++ b/AlanaRetratos-Front-End/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="assets/img/fav.png" />
     <title>Alana Retratos Agendamentos</title>
   </head>
-  <body>
+  <body class="doodle">
     <header class="main-header">
       <div class="header-div">
         <img
@@ -31,11 +31,15 @@
     <div class="main-container">
       <div class="info-display">
         <div class="button-container">
-          <button class="btn btn-open">New Appointment</button>
-          <button class="btn btn-hide-calendar" onclick="showList()">
-            <i class="fa-sharp fa-solid fa-calendar-days"></i>
+          <button class="btn btn-open">
+            <i class="fa-regular fa-calendar-plus">
+              <span class="btn-specific">New</span></i
+            >
           </button>
-          <button class="btn btn-hide-list" onclick="showCalendar()">
+          <button id="hide-calendar" class="btn btn-hide-calendar">
+            <i class="fa-solid fa-calendar"></i>
+          </button>
+          <button id="hide-list" class="btn btn-hide-list">
             <i class="fa-sharp fa-solid fa-list"></i>
           </button>
           <button id="btn-refresh" class="btn">
@@ -45,8 +49,8 @@
         <ul class="nav-list">
           <li>Today's Photo Shoots: <span id="todays-ps">0</span></li>
           <li>Booked over the month: <span id="booked">0</span></li>
-          <li>Finished: <span id="delivered"></span id="finished"> 0</li>
-          <li>Monthly Goal: <span id="goal"></span id="monthly-goal">10</li>
+          <li>Finished: <span id="finished"></span> 0</li>
+          <li>Monthly Goal: <span id="monthly-goal"></span>10</li>
         </ul>
       </div>
 
@@ -67,13 +71,16 @@
         <tbody id="appointments"></tbody>
       </table>
 
-      <div id="calendar" class="calendar-div hidden"></div>
+      <div id="calendar" class="calendar-div"></div>
     </div>
     <!-- MODAL SO WE CAN ADD A NEW APPOINTMENT ON THE CALENDAR -->
     <div class="overlay hidden"></div>
     <div class="modal hidden">
       <div class="flex">
-        <button class="btn-close">⨉</button>
+        <h2>Appointment Data</h2>
+        <button class="btn-close">
+          <i class="fa-regular fa-circle-xmark"></i>
+        </button>
       </div>
       <form class="appointment-form">
         <label for="clientName">Client's Name:</label>
