--- a/AlanaRetratos-Front-End/index.html
+++ b/AlanaRetratos-Front-End/index.html
@@ -36,10 +36,10 @@
               <span class="btn-specific">New</span></i
             >
           </button>
-          <button id="hide-calendar" onclick="showList()" class="btn">
+          <button id="hide-calendar" onclick="listIcon()" class="btn">
             <i class="fa-solid fa-calendar"></i>
           </button>
-          <button id="hide-list" onclick="showCalendar()" class="btn">
+          <button id="hide-list" onclick="calendarIcon()" class="btn">
             <i class="fa-sharp fa-solid fa-list"></i>
           </button>
           <button id="btn-refresh" class="btn">
@@ -75,10 +75,10 @@
     </div>
     <!-- MODAL SO WE CAN ADD A NEW APPOINTMENT ON THE CALENDAR -->
     <div class="overlay hidden"></div>
-    <div class="modal hidden">
+    <div id="forms-modal" class="modal hidden">
       <div class="flex">
         <h2>Appointment Data</h2>
-        <button class="btn-close">
+        <button class="btn-close icon">
           <i class="fa-regular fa-circle-xmark"></i>
         </button>
       </div>
@@ -119,8 +119,21 @@
           <option>EVENT</option>
           <option>DEBUTANT</option>
         </select>
-        <button class="btn" type="submit" onclick="">Submit</button>
+        <button id="submit" class="btn" type="submit" onclick="closeModal()">
+          Submit
+        </button>
       </form>
+    </div>
+    <!-- Modal to confirm deletion -->
+    <div id="confirmation-modal" class="modal modal-confirm hidden">
+      <h2 class="center">Are you sure?</h2>
+      <p class="center" style="color: red">
+        The appointment will be deleted permanently!
+      </p>
+      <div class="space-buttons">
+        <button id="yes-button" class="btn">Yes</button>
+        <button id="no-button" class="btn">No</button>
+      </div>
     </div>
   </body>
   <script src="/functions.js"></script>
