Fixed: Bug that reloaded list everytime; Refactor: The way the list was passed to the calendar

--- a/AlanaRetratos-Front-End/index.html
+++ b/AlanaRetratos-Front-End/index.html
@@ -36,10 +36,10 @@
               <span class="btn-specific">New</span></i
             >
           </button>
-          <button id="hide-calendar" onclick="listIcon()" class="btn">
+          <button id="hide-calendar" onclick="calendarIcon()" class="btn">
             <i class="fa-solid fa-calendar"></i>
           </button>
-          <button id="hide-list" onclick="calendarIcon()" class="btn">
+          <button id="hide-list" onclick="listIcon()" class="btn">
             <i class="fa-sharp fa-solid fa-list"></i>
           </button>
           <button id="btn-refresh" class="btn">
@@ -136,6 +136,6 @@
       </div>
     </div>
   </body>
-  <script src="/functions.js"></script>
+  <script src="/refactor.js"></script>
   <script src="/modalFunctions.js"></script>
 </html>
