--- a/AlanaRetratos-Front-End/index.html
+++ b/AlanaRetratos-Front-End/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/1a3476b34b.js"
       crossorigin="anonymous"
     ></script>
+    <script src="service.js"></script>
 
     <link rel="shortcut icon" href="assets/img/fav.png" />
     <title>Alana Retratos Agendamentos</title>
@@ -54,7 +55,7 @@
         </ul>
       </div>
 
-      <table id="appointment-table" class="appointment-list hidden">
+      <table id="appointment-table" class="styled-table hidden">
         <thead class="thead">
           <tr>
             <th>#</th>
@@ -119,7 +120,7 @@
           <option>EVENT</option>
           <option>DEBUTANT</option>
         </select>
-        <button id="submit" class="btn" type="submit" onclick="closeModal()">
+        <button id="submit" class="btn" type="submit" onsubmit="closeModal()">
           Submit
         </button>
       </form>
@@ -136,6 +137,6 @@
       </div>
     </div>
   </body>
-  <script src="/refactor.js"></script>
+  <script src="/functions.js"></script>
   <script src="/modalFunctions.js"></script>
 </html>
