feat: pop up events

--- a/AlanaRetratos-Front-End/index.html
+++ b/AlanaRetratos-Front-End/index.html
@@ -29,7 +29,7 @@
   <body class="doodle">
     <header class="main-header">
       <div class="header-div">
-        <a href="#"
+        <a href="#" onclick="refreshPage()"
           ><img
             class="logo-img"
             src="/assets/img/Prancheta 4.png"
