feat: colors for photoshoots add

--- a/AlanaRetratos-Front-End/index.html
+++ b/AlanaRetratos-Front-End/index.html
@@ -68,10 +68,14 @@
           </button>
         </div>
         <ul class="nav-list">
-          <li>Today's Photo Shoots: <span id="todays-ps">0</span></li>
-          <li>Booked over the month: <span id="booked">0</span></li>
-          <li>Finished: <span id="finished"></span> 0</li>
-          <li>Monthly Goal: <span id="monthly-goal"></span>10</li>
+          <li id="today-info">
+            Today's Photo Shoots: <span id="todays-ps">0</span>
+          </li>
+          <li id="month-info">
+            Booked over the month: <span id="booked">0</span>
+          </li>
+          <li id="finished">Finished: <span id="finished"></span> 0</li>
+          <li id="goal">Monthly Goal: <span id="monthly-goal"></span>10</li>
         </ul>
       </div>
       <table id="appointment-table" class="styled-table hidden">
@@ -90,7 +94,41 @@
         </thead>
         <tbody id="appointments"></tbody>
       </table>
-      <div id="calendar" class="calendar-div"></div>
+      <div id="calendar-box" class="calendar-box">
+        <div id="ps-colors" class="ps-colors">
+          <ul id="color-list">
+            <li>
+              <i
+                class="fa-solid fa-palette"
+                style="color: var(--lightPurple)"
+              ></i>
+              FEMININE
+            </li>
+            <li>
+              <i class="fa-solid fa-palette" style="color: var(--fashion)"></i>
+
+              FASHION
+            </li>
+            <li>
+              <i class="fa-solid fa-palette" style="color: var(--mom)"></i>
+              MOM
+            </li>
+            <li>
+              <i class="fa-solid fa-palette" style="color: var(--career)"></i>
+              CAREER
+            </li>
+            <li>
+              <i class="fa-solid fa-palette" style="color: var(--event)"></i>
+              EVENT
+            </li>
+            <li>
+              <i class="fa-solid fa-palette" style="color: var(--debutant)"></i>
+              DEBUTANT
+            </li>
+          </ul>
+        </div>
+        <div id="calendar" class="calendar-div"></div>
+      </div>
     </div>
     <!-- MODAL SO WE CAN ADD A NEW APPOINTMENT ON THE CALENDAR -->
     <div class="overlay hidden"></div>
